--- a/HTML/Exercicios/Ex002/index.html
+++ b/HTML/Exercicios/Ex002/index.html
@@ -7,13 +7,15 @@
     <title>Parágrafos</title>
 </head>
 <body>
+    <!--Como adicionar parágrafos e quebras de linhas em um site-->
     <h1>Parágrafos e quebras de linha</h1>
     <hr>
     <p>Para inserir uma linha horizontal em seu site basta usar a tag &lt;hr&gt;.</p>
-    <p>Você pode escrever um parágrafo de qualquer jeito. Basta colocarbasta colocar tudo no meio de tags &lt;p&gt; e &lt;/p&gt;.</p>
+    <p>Você pode escrever um parágrafo de qualquer jeito. Basta colocar tudo no meio de tags &lt;p&gt; e &lt;/p&gt;.</p>
     <p>Se precisar quebrar o texto em algum ligar específico <br> como esse, vc pode usar a tag &lt;br&gt;.</p>
     <p>Vamos adicionar alguns simbolos especiais: &reg; &copy; &trade; &euro; &pound; &yen; &cent; &Delta; &uarr;</p>
     <p>Entre no site da emogibidia pra encontrar os códigos dos emogi.</p>
     <p>Vamos adicionar alguns emogi: &#x1F596; &#x1F913; &#x1F918;</p>
+    <p>Site para buscar imagens unsplash.com, pexels ou google marcada pra reutilização e modificação</p>
 </body>
 </html>
