--- a/HTML/Exercicios/Ex001/index.html
+++ b/HTML/Exercicios/Ex001/index.html
@@ -15,6 +15,7 @@
     </style>
 </head>
 <body>
+    <!--Estrutura básica para criar um site-->
     <h1>Olá, mundo!</h1>
     <hr>
     <p>Esse é o meu primeiro documento HTML.</p>
