--- a/MODULOS/modulo 1/Exercicios/Ex001/index.html
+++ b/MODULOS/modulo 1/Exercicios/Ex001/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <!--Estrutura básica para criar um site-->
-    <h1>Olá, mundo!</h1>
+    <h1>Olá</h1>
     <hr>
     <p>Esse é o meu primeiro documento HTML.</p>
     <p>Este é um momento unico, estou criando um site!</p>
